Use "!/" rather than just "!" as base!/path separator in jar URLs